--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: cancerdata
 Type: Package
-Version: 1.5.0
+Version: 1.5.1
 Date: 2011-10-26
 Title: Development and validation of diagnostic tests from
         high-dimensional molecular data: Datasets
@@ -9,5 +9,5 @@ Maintainer: Daniel Kosztyla <danielkossi@hotmail.com>
 Description: Dataset for the R package cancerclass
 Depends: R (>= 2.10.1), Biobase
 License: GPL (>= 2)
-biocViews: Cancer, Microarray, Classification, Visualization
+biocViews: CancerData, MicroarrayData
 Packaged: 2012-04-30 21:11:46 UTC; mcarlson
